apps/whoami/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: apps-test
spec:
  selector:
    app: whoami
  ports:
    - name: http
      port: 80
      targetPort: 80
